# emergent-gr-h3c-witnesses-repro

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_v1_0_0.md  pyproject.toml
data/: SHA256SUMS  einstein_gap_5point_fit.json  einstein_gap_9point_frobenius.json  einstein_gap_9point_witnesses.json  einstein_gap_chirality_within_p5.json  einstein_gap_results.json  einstein_with_lambda_8point.json  lambda_offdiagonal_Tij_spectral_multiN.json  lattice_diagonal_T_munu_9point.json  lattice_diagonal_T_munu_per_seed_9point.json  lattice_topological_observables_9point.json  lattice_trivial_contributions_9point.json
outputs/: einstein_gap_5point_recompute.json  einstein_gap_9point_witnesses_recompute.json  einstein_gap_Rbar_free_alpha.json  einstein_gap_model_comparison.json  einstein_with_lambda_8point_recompute.json  lambda_LEE_bonferroni.json  lambda_offdiagonal_Tij_spectral.json  lambda_offdiagonal_Tij_spectral_multiN.json  verify_alpha_model_comparison.json  verify_chirality_sup_DOmega.json  verify_chirality_to_integer_lift.json
paper/: abstract_short.tex  manuscript.tex
src/: _d1_npz_discovery.py  make_alpha_table_tex.py  make_figures.py  verify_Rbar_free_alpha.py  verify_alpha_model_comparison.py  verify_chirality_sup_DOmega.py  verify_chirality_to_integer_lift.py  verify_einstein_gap_5point_fit.py  verify_einstein_gap_9point_witnesses.py  verify_einstein_gap_chirality_extended.py  verify_einstein_gap_model_comparison.py  verify_einstein_with_lambda.py  verify_lambda_LEE_bonferroni.py  verify_lambda_offdiagonal_Tij_spectral.py  (+1 more)
tests/: test_gap_2_3.py  (+1 more)
(+3 files in other folders)
